--- a/config/logging.properties
+++ b/config/logging.properties
@@ -2,6 +2,6 @@
 handlers = java.util.logging.ConsoleHandler
 # Default global logging level.
 # Loggers and Handlers may override this level
-.level = FINEST
+owl.level = FINEST
 java.util.logging.ConsoleHandler.level = FINER
 java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
