--- a/.gitignore
+++ b/.gitignore
@@ -4,17 +4,14 @@
 .gradle
 /build/
 
-# Ignore Gradle GUI config
-gradle-app.setting
-
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
 
 # Cache of project
 .gradletasknamecache
 
-# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
-# gradle/wrapper/gradle-wrapper.properties
+
+# ==== IntelliJ files ====
 
 .idea
 *.iml
@@ -22,10 +19,13 @@ gradle-app.setting
 *.iws
 /out/
 
-# Byte-compiled / optimized / DLL files
+# ==== Python files ====
+
 __pycache__/
 *.py[cod]
 *$py.class
 
-# C extensions
+# ==== C/C++ files
+
 *.so
+*cmake-build-*
