--- a/build.gradle
+++ b/build.gradle
@@ -33,8 +33,8 @@ apply plugin: 'application'
 project.group = 'de.tum.in'
 project.version = '1.2.0-SNAPSHOT'
 
-project.sourceCompatibility = '1.8'
-project.targetCompatibility = '1.8'
+project.sourceCompatibility = '1.9'
+project.targetCompatibility = '1.9'
 project.archivesBaseName = 'owl'
 
 def defaultEncoding = 'UTF-8'
@@ -50,7 +50,7 @@ dependencies {
     compileOnly 'org.immutables:value:2.5.5'
     compileOnly 'javax.annotation:javax.annotation-api:1.3.1'
 
-    compile 'com.google.guava:guava:23.0'
+    compile 'com.google.guava:guava:23.4-jre'
     compile 'it.unimi.dsi:fastutil:8.1.0'
     compile 'org.antlr:antlr4-runtime:4.7'
     compile 'de.tum.in:jbdd:0.2.0'
