Add support for all types of parity acceptance (min/max) (even/odd) and PGSolver format
- Add conformance tests to HOA format
- Add parity conversion method and module together with a ltlcross test

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,7 +42,6 @@ Build:
   when: manual
   dependencies: []
 
-
 # LTL to Automaton
 
 LTL2LDBA:
@@ -93,6 +92,13 @@ NBA2DPA:
     TEST_NAME: "nba2dpa"
   <<: *ltlcross_template
 
+# Conversions
+
+DPA Conversion:
+  stage: test
+  variables:
+    TEST_NAME: "ltl2dpa-convert"
+  <<: *ltlcross_template
 
 # Benchmarks
 
