--- a/build.gradle
+++ b/build.gradle
@@ -249,7 +249,7 @@ def scripts = [
     'synth'      : 'owl.translations.Synthesis',
     'ltl2da'     : 'owl.translations.LTL2DA',
     'ltl2dpa'    : 'owl.translations.LTL2DPA',
-    'ltl2ldba'   : 'owl.translations.ltl2ldba.LTL2LDBAModule',
+    'ltl2ldba'   : 'owl.translations.ltl2ldba.LTL2LDBACliParser',
     'nba2ldba'   : 'owl.translations.nba2ldba.NBA2LDBA',
     'dra2dpa'    : 'owl.translations.dra2dpa.IARBuilder',
     'delag'      : 'owl.translations.delag.DelagBuilder',
