--- a/config/logging.properties
+++ b/config/logging.properties
@@ -3,5 +3,5 @@ handlers = java.util.logging.ConsoleHandler
 # Default global logging level.
 # Loggers and Handlers may override this level
 owl.level = FINEST
-java.util.logging.ConsoleHandler.level = FINEST
+java.util.logging.ConsoleHandler.level = FINE
 java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
