Further improve BDD-based factories and make GC-managed reference counting more lightweight

--- a/config/logging.properties
+++ b/config/logging.properties
@@ -2,6 +2,7 @@
 handlers = java.util.logging.ConsoleHandler
 # Default global logging level.
 # Loggers and Handlers may override this level
-owl.level = FINEST
-java.util.logging.ConsoleHandler.level = FINE
+owl.level = INFO
+owl.factories.jbdd.GcManagedFactory.level = FINEST
+java.util.logging.ConsoleHandler.level = FINEST
 java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
