--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ plugins {
     id 'net.ltgt.errorprone' version '0.0.13'
     // http://imperceptiblethoughts.com/shadow/
     // id 'com.github.johnrengelman.shadow' version '2.0.2'
+    id 'net.ltgt.apt-idea' version '0.14'
 }
 
 apply plugin: 'c'
@@ -65,15 +66,15 @@ repositories {
 }
 
 dependencies {
-    compileOnly 'org.immutables:value:2.5.5' // https://immutables.github.io/
-    compileOnly 'javax.annotation:javax.annotation-api:1.3.1' // TODO Remove
+    compileOnly 'org.immutables:value:2.5.5:annotations' // https://immutables.github.io/
+    annotationProcessor 'org.immutables:value:2.5.5'
     compileOnly 'com.github.spotbugs:spotbugs-annotations:3.1.1' // TODO Remove
 
     compile 'com.google.guava:guava:24.0-jre'
     compile 'it.unimi.dsi:fastutil:8.1.1'
     compile 'org.antlr:antlr4-runtime:4.7.1'
-    compile 'de.tum.in:jbdd:0.2.0'
-    compile 'de.tum.in:naturals-util:0.9.0'
+    compile 'de.tum.in:jbdd:0.3.2'
+    compile 'de.tum.in:naturals-util:0.10.0'
     compile 'commons-cli:commons-cli:1.4'
 
     compile files('lib/jhoafparser-1.1.1-patched.jar')
@@ -106,7 +107,7 @@ jar {
             "Main-Class": project.mainClassName,
             "Implementation-Version": version)
     }
-    exclude('**.java') // Generated .java files
+    // exclude('**.java') // Generated .java files
 }
 
 //noinspection GroovyAssignabilityCheck,UnnecessaryQualifiedReference
@@ -120,9 +121,9 @@ def proGuardTask = task proguard(name: "proguard", type: proguard.gradle.ProGuar
     libraryjars "${System.getProperty('java.home')}/lib"
 
     dontwarn 'org.immutables.**'
-    dontwarn 'edu.umd.cs.findbugs.annotations.SuppressFBWarnings' // TODO remove
     dontwarn 'afu.org.checkerframework.checker.**'
     dontwarn 'org.checkerframework.checker.**'
+    dontwarn 'edu.umd.cs.findbugs.annotations.SuppressFBWarnings'
 
     injars configurations.findByName('runtimeClasspath').getFiles(), filter: '!META-INF/**,**.class'
     injars files(jar)
