Redesign C++-API. Constructed Automata are now reduced using an isomorphism detection for formulas. Closes #116.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,7 @@ Build:
     - ./gradlew --no-daemon build
   artifacts:
     paths:
+    - build/tmp/
     - build/reports/
     when: on_failure
     expire_in: 1 week
