--- a/build.gradle
+++ b/build.gradle
@@ -66,9 +66,8 @@ repositories {
 }
 
 dependencies {
-    compileOnly 'org.immutables:value:2.5.5:annotations' // https://immutables.github.io/
-    annotationProcessor 'org.immutables:value:2.5.5'
-    compileOnly 'com.github.spotbugs:spotbugs-annotations:3.1.1' // TODO Remove
+    // https://immutables.github.io/
+    compileOnly 'org.immutables:value:2.5.5:annotations' 
 
     compile 'com.google.guava:guava:24.0-jre'
     compile 'it.unimi.dsi:fastutil:8.1.1'
@@ -76,16 +75,15 @@ dependencies {
     compile 'de.tum.in:jbdd:0.3.2'
     compile 'de.tum.in:naturals-util:0.10.0'
     compile 'commons-cli:commons-cli:1.4'
-
     compile files('lib/jhoafparser-1.1.1-patched.jar')
 
-    testCompileOnly 'org.immutables:value:2.5.5'
+    testCompileOnly 'org.immutables:value:2.5.5:annotations'
+    
     testCompile 'junit:junit:4+'
-    testCompile 'org.hamcrest:hamcrest-all:1.3'
     testCompile 'org.hamcrest:hamcrest-library:1.3'
 
     antlr 'org.antlr:antlr4:4.7.1' // Introduces unused runtime dependencies
-
+    annotationProcessor 'org.immutables:value:2.5.5'
     errorprone 'com.google.errorprone:error_prone_core:2.2.0'
 }
 
