--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ Build:
   stage:
     build
   script:
-    - ./gradlew --no-daemon -Pdisable-proguard build
+    - ./gradlew --no-daemon build
   artifacts:
     paths:
     - build/tmp/
@@ -20,10 +20,9 @@ Build:
     when: on_failure
     expire_in: 1 week
 
-# TODO Remove -Pdisable-proguard once proguard is compatible with current java
 .ltlcross: &ltlcross_template
   script:
-    - ./gradlew --no-daemon -Pdisable-proguard -Pfull buildBin
+    - ./gradlew --no-daemon -Pfull buildBin
     - python3 scripts/util.py test $TEST_NAME
   artifacts:
     paths:
